# R-type

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  test.cpp
client/: CMakeLists.txt  Client.cpp  Menu.cpp  Menu.hpp  main.cpp
client/ecs/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  NetworkManager.cpp  NetworkManager.hpp  components.hpp  ecs.hpp  network.hpp  systems.hpp
client/ecs/callback/: EventCallbacks.cpp  EventCallbacks.hpp  NetworkCallbacks.cpp  NetworkCallbacks.hpp
client/ecs/component/: AComponent.hpp  BulletIdComponent.hpp  EnnemyIdComponent.hpp  EventHandlerComponent.hpp  HealthComponent.hpp  HoverComponent.hpp  InputComponent.hpp  NetworkCallbackComponent.hpp  NetworkComponent.hpp  ParallaxComponent.hpp  PositionComponent.hpp  RectangleShapeComponent.hpp  RenderComponent.hpp  ScoreComponent.hpp  SelectionComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  UsernameComponent.hpp  VelocityComponent.hpp
client/ecs/entity/: AllyEntity.cpp  AllyEntity.hpp  ButtonEntity.cpp  ButtonEntity.hpp  BydosEntity.cpp  BydosEntity.hpp  HudEntity.cpp  HudEntity.hpp  MenuEntity.cpp  MenuEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  TextFieldEntity.cpp  TextFieldEntity.hpp
client/ecs/system/: EventHandlingSystem.cpp  EventHandlingSystem.hpp  HoverSystem.cpp  HoverSystem.hpp  InputSystem.cpp  InputSystem.hpp  MenuSystem.cpp  MenuSystem.hpp  MessageSystem.cpp  MessageSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SelectionSystem.cpp  SelectionSystem.hpp  SoundSystem.cpp  SoundSystem.hpp
server/: Bullet.hpp  CMakeLists.txt  Client.hpp  ClientManager.hpp  Enemy.hpp  GameCoordinator.cpp  GameCoordinator.hpp  Observer.hpp  PacketHandler.cpp  PacketHandler.hpp  Server.cpp  Server.hpp  broadcast.cpp  game_state.cpp  gameloop.cpp  handle.cpp  main.cpp
server/Notification/: BroadcastBulletHitNotification.hpp  BulletCreationNotification.hpp  BulletStateNotification.hpp  EnemyDeathNotification.hpp  EnemyStateNotification.hpp  GameStartNotification.hpp  NetworkNotification.hpp  Notification.hpp  PlayerCreationNotification.hpp  PlayerDeathNotification.hpp  PlayerStateNotification.hpp
server/State/: BulletState.cpp  BulletState.hpp  EnemyState.cpp  EnemyState.hpp  PlayerState.cpp  PlayerState.hpp
server/StateManager/: BulletStateManager.cpp  BulletStateManager.hpp  EnemyStateManager.cpp  EnemyStateManager.hpp  PlayerStateManager.cpp  PlayerStateManager.hpp  StateManager.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/network/packets/: BulletHitPacketTest.cpp  BulletsUpdatePacketTest.cpp  EnemiesUpdatePacketTest.cpp  EnemyDeathPacketTest.cpp  ErrorPacketTest.cpp  GameOverPacketTest.cpp  GameStartPacketTest.cpp  PacketTest.cpp  PlayerConnectPacketTest.cpp  PlayerDeathPacketTest.cpp  PlayerDisconnectPacketTest.cpp  PlayerMovePacketTest.cpp  PlayerReadyPacketTest.cpp  PlayerShootPacketTest.cpp  PlayersUpdatePacketTest.cpp  (+1 more)
(+253 files in other folders)
